<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="367dp"
        android:layout_height="542dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="84dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.842">

        <TextView
            android:id="@+id/txtAnalytic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:text="@string/txtAnalytics" />

        <TextView
            android:id="@+id/txtRub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRubCount" />

        <TextView
            android:id="@+id/txtDol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDolCount" />

        <TextView
            android:id="@+id/txtCyn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCynCount" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>